src/app/topbar/topbar.component.css
nav {
    background-image: linear-gradient(to right,var(--secondary), var(--primary));
}

