Fixed Radiobutton alignment

--- a/src/app/topbar/topbar.component.css
+++ b/src/app/topbar/topbar.component.css
@@ -1,3 +1,4 @@
 nav {
     background-image: linear-gradient(to right,var(--secondary), var(--primary));
+    box-shadow: 0px 5px 10px grey;
 }
